third_party/move/move-compiler-v2/tests/checking/dotdot/dotdot_ambiguious.exp

Diagnostics:
error: unexpected token
  ┌─ tests/checking/dotdot/dotdot_ambiguious.move:5:22
  │
5 │         let S(.., x, ..) = x;
  │                      ^^ there can be at most one `..` per struct or variant pattern
