third_party/move/move-compiler-v2/tests/checking/dotdot/dotdot_ambiguious.move
module 0x42::test {
    struct S(bool, u8, address);

    fun simple_0(x: S) {
        let S(.., x, ..) = x;
    }
}
